# spissa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  check_hf_llama_rope.py  entropy_probe.py  extreme_rans_probe.py  fix_cache_broadcast.py  fix_errors.py  fix_lib.py  fix_llama.py  fix_llama2.py  fix_llama_cache.py  fix_llama_rope.py  fix_ownership.py  generate_llama.py  generate_llama_api.py  phase80_compare_llama_logits.py  qwen_ref.py  qwen_ref_l0.py  rllm_ai_agent_spec.md  spissa_ai_agent_spec.md  test_lut  test_lut.rs  try-gemma.sh  try-llama.sh  update_api_logits.py
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: modular_code_guard.py
.claude/skills/modular-code-guard/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  linux.yml  release.yml
crates/rllm-cli/: Cargo.toml
crates/rllm-cli/src/: chat_template.rs  main.rs
crates/rllm-cli/src/commands/: benchmark.rs  chat.rs  chat_session.rs  chat_session_token.rs  doctor.rs  fetch.rs  import.rs  inspect.rs  menu.rs  mod.rs  pack.rs  run.rs  unpack.rs  verify.rs
crates/rllm-cli/src/commands/bench/: long_prompt.rs  low_ram_fast.rs  mod.rs  prefill_timing.rs  release_rss.rs  report.rs  runner.rs
crates/rllm-container/: Cargo.toml
crates/rllm-container/src/: error.rs  header.rs  lib.rs  metadata.rs  reader.rs  writer.rs
crates/rllm-import/: Cargo.toml
crates/rllm-import/src/: lib.rs  safetensors.rs  tokenizer.rs
crates/rllm-runtime/: Cargo.toml
crates/rllm-runtime/src/: dequantize.rs  echo.rs  error.rs  gpt_neox.rs  lazy.rs  lib.rs  loader.rs  memory.rs  ops.rs  planner.rs  q8_kernel_lab.rs  q8_profile.rs  rolling.rs  rotary.rs  session.rs  speed.rs  streaming.rs  tensor.rs  tiny.rs  tokenizer.rs  trace.rs
crates/rllm-runtime/src/models/: gpt_neox.rs  mod.rs
crates/rllm-runtime/src/models/gemma/: api.rs  generate.rs  mod.rs  model.rs
crates/rllm-runtime/src/models/llama/: api.rs  generate.rs  mod.rs  model.rs  session.rs
crates/rllm-runtime/src/models/llama/session/: drift_probe.rs  lm_head.rs  mod.rs  tests_core.rs  tests_speed.rs  validation.rs
crates/rllm-runtime/src/models/qwen/: api.rs  generate.rs  mod.rs  model.rs  session.rs
crates/rllm-runtime/src/speed/: config.rs  mod.rs  policy.rs  stats.rs  tests.rs
crates/rllm-runtime/src/streaming/: argmax.rs  attention.rs  bitplane_gemv.rs  bitplane_stream.rs  block.rs  decode_pool.rs  kernels.rs  kernels_q8.rs  kernels_q8_matmul.rs  kernels_q8_support.rs  kernels_raw16.rs  kernels_raw16_multiply.rs  kernels_raw16_sparse.rs  linear.rs  linear_argmax.rs  linear_multiply.rs  linear_sparse.rs  linear_sparse_input.rs  linear_sparse_support.rs  mlp.rs  mod.rs  rans_stream.rs  tests.rs  tests_bitplane_stream.rs  tests_rans_stream.rs  validation.rs
crates/rllm-runtime/tests/: rans_exponent_scout.rs  rans_whole_model_size.rs  weight_entropy_analysis.rs
crates/rtc-codec/: Cargo.toml
crates/rtc-codec/src/: bitplane.rs  bitreader_fast.rs  codec.rs  delta.rs  dfloat.rs  error.rs  forcodec.rs  huff.rs  lib.rs  rans.rs  raw.rs  rle.rs  tests_bitplane.rs
crates/spissa-cli/: Cargo.toml
crates/spissa-cli/src/: chat_template.rs  main.rs  progress.rs
crates/spissa-cli/src/commands/: benchmark.rs  chat.rs  chat_session.rs  chat_session_token.rs  delta.rs  doctor.rs  fetch.rs  import.rs  inspect.rs  menu.rs  mod.rs  pack.rs  run.rs  unpack.rs  verify.rs
crates/spissa-cli/src/commands/bench/: long_prompt.rs  low_ram_fast.rs  mod.rs  prefill_timing.rs  release_rss.rs  report.rs  runner.rs
crates/spissa-container/: Cargo.toml
crates/spissa-container/src/: error.rs  header.rs  lib.rs  metadata.rs  reader.rs  writer.rs
crates/spissa-import/: Cargo.toml
crates/spissa-import/src/: lib.rs  safetensors.rs  tokenizer.rs
crates/spissa-runtime/: Cargo.toml
docs/: android-termux.md  codec-rtc-v1.md  format-rllm-v1.md  format-spissa-v1.md  gpu-backend-plan.md  idea-fast-lossless-decode-rram.md  phase710a-row-span-linear-accumulation.md  phase710c-deep-prefill-timing.md  phase710d-mlp-prefill-row-reuse.md  phase710e-attention-row-slice.md  phase711a-pythia160m-scale-validation.md  phase711b-pythia160m-prefill-window-sweep.md  phase712a-shape-budget-prefill-policy.md  phase712c-streamed-lm-head-argmax.md  phase77-hf-logits-comparison.md  phase78-range-decode-foundation.md  phase78-tileblock-rss-benchmark.md  phase79-long-prompt-benchmark.md  phase79-low-ram-fast-runtime-layout.md  phase79-rama-trace-profiler.md  qwen3_5-adapter-design.md  reeform-phase0-results.md  reeform-prd.md  rllm-echo-ember-architecture.md  rllm-rama-architecture.md  roadmap.md  spissa-echo-ember-architecture.md  spissa-rama-architecture.md
docs/archive/: phase710a-row-span-linear-accumulation.md  phase710b-rama-prefill-homeostasis.md  phase710c-deep-prefill-timing.md  phase710e-attention-row-slice.md  phase711a-pythia160m-scale-validation.md  phase711b-pythia160m-prefill-window-sweep.md  phase712a-shape-budget-prefill-policy.md  phase712b-eight-row-projection-reuse.md  phase712c-streamed-lm-head-argmax.md  phase76-release-rss-benchmark.md  phase77-hf-logits-comparison.md  phase78-range-decode-foundation.md  phase78-tileblock-rss-benchmark.md  phase79-embedding-row-recall.md  phase79-long-prompt-benchmark.md  phase79-low-ram-fast-runtime-layout.md  phase79-rama-trace-profiler.md  phase79e-rama-prefill-chunking.md
docs/benchmarks/: README.md
research/reeborn/: PRIOR-ART.md  RESULTS.md  exp0_entropy.py  exp1_scale.py  exp2_lossless_structure.py  exp3_mixture.py  exp4_sparsity.py  exp5_embedding.py  exp6_permutation.py  exp7_reeborn_v1.py  exp8_residual.py  exp9_for_width_realmodel.py
research/trials/: README.md  index.md
scripts/: bump-version.sh  phase76_release_rss_benchmark.py  phase77_compare_logits.py  phase79c_low_ram_fast_benchmark.py  phase79d_long_prompt_benchmark.py  phase79e_prefill_timing_benchmark.py  test_phase79d_long_prompt_benchmark.py
(+330 files in other folders)
