[workspace]
resolver = "2"
members = [
    "crates/spissa-cli",
    "crates/spissa-container",
    "crates/rtc-codec",
    "crates/spissa-import",
    "crates/spissa-runtime",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
# MIT — open source. See LICENSE.
license = "MIT"
publish = false
repository = "https://github.com/Erik-cpu-create/spissa"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Hashing
sha2 = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Memory-mapped I/O
memmap2 = "0.9"

# Low-level OS bindings (child rusage / peak RSS measurement)
libc = "0.2"

# HTTP client for the HF model downloader (rustls, no system OpenSSL — universal)
ureq = "2"

# Interactive arrow-key menus for `spissa menu` (crossterm-based, cross-platform)
inquire = "0.7"

# Distribution build: strip symbols, whole-program LTO + single codegen unit for the
# smallest, fastest binary.
[profile.release]
strip = true
lto = true
codegen-units = 1
