[package]
name = "rllm-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Import models from external formats (safetensors) into RLLM"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rllm-container = { path = "../rllm-container" }
