[package]
name = "rllm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime tensor loading and toy inference primitives for RLLM"

[dependencies]
rllm-container = { path = "../rllm-container" }
rtc-codec = { path = "../rtc-codec" }

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[[bin]]
name = "q8-microbench"
path = "src/bin/q8-microbench.rs"
