[package]
name = "spissa-container"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spissa binary container format (.spsa) parser and writer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
libc = { workspace = true }
